[RGA2-269] Fixed overflow checkbox text

--- a/rg_instructor_analytics/static/rg_instructor_analytics/css/custom.css
+++ b/rg_instructor_analytics/static/rg_instructor_analytics/css/custom.css
@@ -1002,6 +1002,7 @@ body.view-instructor_analytics #instructor-analytics-dashboard-content .enroll-b
   font-size: 14px;
   line-height: 15px;
   border: 0;
+  overflow: visible;
 }
 
 .funnel-item .input-checkbox input[type="checkbox"] + .label-text:before {
